objects/ExternalBankEntitiesIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting  para registrar ids de entidades bancarias y Nombres de Entidades Bancarias</description>
    <fields>
        <fullName>BankCode__c</fullName>
        <label>BankCode</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBankCode__c</fullName>
        <label>ParentBankCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sequences__c</fullName>
        <label>Sequences</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>ExternalBankEntitiesIds</label>
</CustomObject>